# Fairy-Chess

./: .gitignore  .gitmodules  FairyChess-ClassDiagram.drawio  README.md  build.gradle  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/androidTest/java/emerald/apps/fairychess/: ChessAIPerformanceTest.kt  ChessGameTest.kt  ChesstimerUnitTest.kt  ExampleInstrumentedTest.kt  FairyStockfishWrapperTest.kt  Integrationtests.kt  MultiplayerDBUnittest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  stockfish-wrapper.cpp
app/src/main/java/emerald/apps/fairychess/: MainActivity.kt
app/src/main/java/emerald/apps/fairychess/controller/: ChessActivityListener.java  ChessActivityListener.kt  GameListAdapter.kt  MainActivityListener.java  MainActivityListener.kt
app/src/main/java/emerald/apps/fairychess/model/: Bitboard.kt  BitboardChessPiece.kt  BitboardUtils.kt  ChessAI.kt  ChessPiece.kt  ChessRatingSystem.kt  ChessTimer.kt  Chessboard.kt  Chessgame.java  Chessgame.kt  CountDownTimerWithPause.kt  Evaluator.kt  Movement.kt  MovementHash.kt  MultiplayerDB.kt  StubChessAI.kt  ValueHash.kt  ZobristHash.kt
app/src/main/java/emerald/apps/fairychess/model/Caching/: MovementCache.kt  PossibleMovementsCache.kt  README.md  ValueCache.kt
app/src/main/java/emerald/apps/fairychess/model/bitboard/: Bitboard.kt  BitboardUtils.kt  Coordinate.kt
app/src/main/java/emerald/apps/fairychess/model/board/: Chessboard.java  Chessboard.kt  Color.java  Color.kt  Coordinate.java  Coordinate.kt  GameStats.java  Movement.java  Movement.kt  MovementNotation.java  PromotionMovement.java
app/src/main/java/emerald/apps/fairychess/model/multiplayer/: MultiplayerDB.java  MultiplayerDB.kt  MultiplayerDBGameInterface.java  MultiplayerDBSearchInterface.java
app/src/main/java/emerald/apps/fairychess/model/pieces/: ChessPiece.kt  Leaper.kt  PawnPromotion.kt
app/src/main/java/emerald/apps/fairychess/model/rating/: ChessRatingSystem.java  ChessRatingSystem.kt
app/src/main/java/emerald/apps/fairychess/model/timer/: ChessTimer.kt  ChessTimerOpponent.java  ChessTimerPlayer.java  ChessTimerPlayerInterface.java  (+3 more)
app/src/main/java/emerald/apps/fairychess/utility/: ChessFormationParser.kt  FigureParser.kt
app/src/main/java/emerald/apps/fairychess/view/: ChessActivity.java  ChessActivity.kt  ChessCreatorFragment.kt  ChessDesignerActivity.java  ChessDesignerActivity.kt  MainActivity.java  MainActivity.kt  MultiplayerFragment.kt  ProfileFragment.kt  SingleplayerFragment.kt
app/src/main/res/drawable/: custom_button_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_chess.xml  activity_chess_black_perspective.xml  activity_chess_designer.xml  activity_chess_white_perspective.xml  activity_main.xml  alertdialog_create_game.xml  alertdialog_offline_game_parameters.xml  alertdialog_online_game_parameters.xml  alertdialog_playerstats.xml  alertdialog_search_game.xml  dialog_game_end.xml  dialog_info.xml  fragment_board.xml  fragment_chess_designer.xml  fragment_chesscreator.xml  fragment_multiplayer.xml  fragment_pieces.xml  fragment_profile.xml  fragment_rules.xml  fragment_singleplayer.xml  fragment_validation.xml  game_rowview.xml  promotion_layout.xml  waiting_for_join_dialog.xml
app/src/main/res/menu/: bottom_nav_menu.xml  chess_designer_nav_menu.xml
app/src/main/res/raw/: berolina_chess.chessformation  figures.json  games.pgn  games2.pgn  gamesDB  gamesdb  grasshopper_chess.chessformation  move_notation.txt  normal_chess.chessformation
app/src/main/res/values/: array.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/emerald/apps/fairychess/: BitboardChessPieceTest.kt  BitboardTest.kt  ChessAIPerformanceTest.kt  ChessAITest.kt  ChessGameUnitTest.kt  ChessPieceUnitTest.kt  ChessRatingSystemTest.kt  ChessboardUnitTest.kt  ExampleUnitTest.kt  ParserTest.kt  StubAIUnitTest.kt
app/src/test/java/emerald/apps/fairychess/BitboardTests/: BasicMoveTest.kt  ChessvariantTest.kt  MoveGenerationTests.kt
app/src/test/java/emerald/apps/fairychess/chessGameTester/: ChessGameTest.kt  ChessgameParser.kt  chessgameParser.kt
docs/: ChessDesigner.md
gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
